# GeneralPolygonClipper

./: CMakeLists.txt  draw_test.ipynb  fcpc.cc  fcpc.h  gpcpp.cc  gpcpp.h  test.cc
